--- a/style.css
+++ b/style.css
@@ -34,20 +34,7 @@ label {
     margin-bottom: 5px;
 }
 
-/* Estilo para a logo */
-.logo {
-    display: block; /* A logo é exibida como um bloco */
-    width: 120px; /* Largura da logo */
-    height: 100px; /* Altura da logo */
-    background-color: #f1f1f1; /* Cor de fundo da logo */
-    text-align: center; /* Centraliza o conteúdo da logo horizontalmente */
-    line-height: 100px; /* Centraliza o conteúdo da logo verticalmente */
-    font-size: 24px; /* Tamanho da fonte da logo */
-    font-weight: bold; /* Peso da fonte */
-    color: #333; /* Cor do texto da logo */
-    text-decoration: none; /* Remove a decoração de texto */
-    border-radius: 50px;
-}
+
 
 
 select {
@@ -59,15 +46,21 @@ select {
     max-width: 300px;
 }
 
-/* Estilos para as opções do seletor de gênero */
 option {
     font-size: 14px;
 }
 
-/* Estilos para a opção "Todos" */
 option[value=""] {
     font-style: italic;
     background-color: #ff8080;
 }
+
+.limitar-linhas {
+    display: -webkit-box;
+    -webkit-line-clamp: 6; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 
 
