--- a/style.css
+++ b/style.css
@@ -60,7 +60,9 @@ option[value=""] {
     -webkit-line-clamp: 6; 
     -webkit-box-orient: vertical;
     overflow: hidden;
+    cursor: pointer;
 }
+
 
 
 
